// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorCard renders without crashing 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 8rem;
  min-width: 12rem;
  overflow: hidden;
  text-align: center;
  -webkit-transition: opacity ease-in;
  transition: opacity ease-in;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-4 {
  background-color: #F7F8F8;
  color: #666D70;
  border-radius: 3px;
  display: inline-block;
  font-size: 12px;
  padding: 1px 4px;
}

.emotion-8 {
  color: #000;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: bold;
  font-size: 2rem;
  text-align: center;
}

.emotion-12 {
  background-color: #CFFCDA;
  color: #004215;
  border-radius: 3px;
  display: inline-block;
  font-size: 12px;
  padding: 1px 4px;
}

<div
  className="emotion-0 emotion-1"
  data-testid="colorCard"
>
  <div
    className="emotion-2 emotion-3"
  >
    <span
      className="emotion-4 emotion-5"
      title="Color contrast ratio"
    >
      21
       : 1
    </span>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-8 emotion-9"
      color="#000"
      data-testid="colorCard-swatch"
    >
      Yup
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <span
      className="emotion-12 emotion-5"
    >
      Small: 
      AAA
    </span>
    <span
      className="emotion-12 emotion-5"
    >
      Large: 
      AAA
    </span>
  </div>
</div>
`;

exports[`ColorCard should render a not important card 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 8rem;
  min-width: 12rem;
  overflow: hidden;
  opacity: 0.1;
  text-align: center;
  -webkit-transition: opacity ease-in;
  transition: opacity ease-in;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-4 {
  background-color: #F7F8F8;
  color: #666D70;
  border-radius: 3px;
  display: inline-block;
  font-size: 12px;
  padding: 1px 4px;
}

.emotion-8 {
  color: #000;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: bold;
  font-size: 2rem;
  text-align: center;
}

.emotion-12 {
  background-color: #CFFCDA;
  color: #004215;
  border-radius: 3px;
  display: inline-block;
  font-size: 12px;
  padding: 1px 4px;
}

<div
  className="emotion-0 emotion-1"
  data-testid="colorCard"
>
  <div
    className="emotion-2 emotion-3"
  >
    <span
      className="emotion-4 emotion-5"
      title="Color contrast ratio"
    >
      21
       : 1
    </span>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-8 emotion-9"
      color="#000"
      data-testid="colorCard-swatch"
    >
      Yup
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <span
      className="emotion-12 emotion-5"
    >
      Small: 
      AAA
    </span>
    <span
      className="emotion-12 emotion-5"
    >
      Large: 
      AAA
    </span>
  </div>
</div>
`;
